--- a/app/templates/components/leaflet-map.hbs
+++ b/app/templates/components/leaflet-map.hbs
@@ -17,7 +17,7 @@
 {{#if show-info}}
     <div {{action "closeInfo" this}} class="diagram-content">
     </div>
-        {{info-box data=cityOverview allIncidents=casual-toggle meta=details action="getMessage"}}
+        {{info-box data=cityOverview allIncidents=casual-toggle log=cityStats meta=details action="getMessage"}}
 {{/if}}
 {{/unless}}
 
