--- a/app/templates/components/info-box.hbs
+++ b/app/templates/components/info-box.hbs
@@ -92,7 +92,7 @@
                     <tbody>
                     {{#each log as |log|}}
                             <tr class="logrow">
-                                <td>
+                                <td class="logdate">
                                     {{log.date}}
                                 </td>
                                 <td>
