--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -110,3 +110,7 @@
 .marked {
   background-color:#c9c9c9;
 }
+.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.ui-front {
+  background-color: #f9f9f9;
+  border: 1px solid #c9c9c9;
+}
