--- a/app/templates/components/leaflet-map.hbs
+++ b/app/templates/components/leaflet-map.hbs
@@ -4,13 +4,21 @@
     <div id="controls">
         <div class="btn-group" role="group" class="{{if show-diagram "hide"}}">
           <!-- <input type="text" name="filter" placeholder="Filter by" id="filterSearch" val> -->
-          <button {{action "casualties"}} title="Toggle including incidents with no casualties on and off" type="button" class="btn {{if casual-toggle "btn-success" "btn-default"}}">
+          <button {{action "casualties"}} title="Toggle including incidents with no casualties on and off" type="button" class="btn {{if casual-toggle "btn-default" "btn-danger"}}">
               {{if casual-toggle "All incidents" "Lethal incidents"}}
           </button>
-          <button {{action "radius"}} title="Toggle between radius by number of incidents and radius by number of fatalities" type="button" class="btn {{if radius-toggle "btn-danger" "btn-success"}}">
+          <button {{action "radius"}} title="Toggle between radius by number of incidents and radius by number of fatalities" type="button" class="btn {{if radius-toggle "btn-danger" "btn-default"}}">
               {{if radius-toggle "Radius by incidents" "Radius by casualties"}}
           </button>
-          {{input class="form-control" placeholder="Filter by" id="filterSearch" value=filterPerp}}
+          {{input class="form-control" placeholder="Filter by" id="filterSearch" value=filterVal}}
+          {{#each filterPerp as |filter|}}
+            <div class="selected_filter">
+              {{filter}}
+<!--               <span class="glyphicon glyphicon-remove" aria-hidden="true" {{action 'removeFilter' filter}}></span>
+              <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span> -->
+              {{fa-icon 'times' click=(action "removeFilter" filter)}}
+            </div>
+          {{/each}}
           <!-- <button type="button" class="btn btn-default">Right</button> -->
         </div>
     </div>
