--- a/app/templates/components/leaflet-map.hbs
+++ b/app/templates/components/leaflet-map.hbs
@@ -4,10 +4,13 @@
     <div id="controls">
         <div class="btn-group" role="group" class="{{if show-diagram "hide"}}">
           <!-- <input type="text" name="filter" placeholder="Filter by" id="filterSearch" val> -->
-          <button {{action "casualties"}} title="Toggle including incidents with no casualties on and off" type="button" class="btn {{if casual-toggle "btn-default" "btn-danger"}}">
+          <button {{action "casualties"}} title="Toggle including incidents with no casualties on and off" type="button" class="btn btn-default">
+          {{!-- class="btn {{if casual-toggle "btn-default" "btn-danger"}}"> --}}
               {{if casual-toggle "All incidents" "Lethal incidents"}}
           </button>
-          <button {{action "radius"}} title="Toggle between radius by number of incidents and radius by number of fatalities" type="button" class="btn {{if radius-toggle "btn-danger" "btn-default"}}">
+          <button {{action "radius"}} title="Toggle between radius by number of incidents and radius by number of fatalities" type="button" class="btn btn-default">
+
+          {{!-- class="btn {{if radius-toggle "btn-danger" "btn-default"}}"> --}}
               {{if radius-toggle "Radius by incidents" "Radius by casualties"}}
           </button>
           {{input class="form-control" placeholder="Filter by" id="filterSearch" value=filterVal}}
@@ -34,3 +37,9 @@
 {{#if show-diagram}}
     {{circle-diagram data=cityStats meta=details action="closeDiagram"}}
 {{/if}}
+
+<div class="slide-group">
+  <div class="year">{{startRange}}</div>
+  <div class="drag-slide"></div>
+  <div class="year">{{endRange}}</div>
+</div>
